# roomba

./: LICENSE  README
Arduino/arduinobot/: arduinobot.ino  arduinobot.pde
RoombaMidi2/: Help.html  RoombaMidi2.icns  RoombaMidi2.m
RoombaMidi2/English.lproj/: InfoPlist.strings
RoombaMidi2/RoombaMidi2.xcodeproj/: project.pbxproj  tod.mode1  tod.pbxuser
Vex/: roombavex.c  roombavex.h
roombacmd/: Makefile  WebDriveSetup.html  beep500.sh  camera.sh  pico.sh  poweroff.sh  rleft.sh  roombacmd.c  roombacmd.mpl  roombacmd.sh  roombacmd500.sh  roombalib.c  roombalib.h  roombasrvr.sh  rs.sh  rstop.sh  ser.sh  ser2net.conf  ser2netusb.conf  ser400usb.sh  serusb.sh  simpletest.c
roombacmd-ipkg/: Makefile
roombacmd-ipkg/ipkg/: roombacmd.control
roombacmd/roombapanel/: roombapanel.cgi
roombacmd/webdrive/: webdrive.cgi  webdrive.css  webdrive.html
roombacomm/trunk/: .classpath  .project  README.html  build.xml
roombasrvr/: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  server.c  uvccapture.c  v4l2uvc.h
roombasrvr/.deps/: roombasrvr-server.Po  roombasrvr-uvccapture.Po  roombasrvr-v4l2uvc.Po
scripts/: beep500.sh  picoU0.sh  picoU1.sh  sdar1.sh
serialdaemon/: Makefile  serialdaemon.c  serialdaemon_arm
tags/RoombaMidi2_DPRG_arrival/: Info.plist  MidiHandler.h  MidiHandler.m  RoombaMidi2.h  main.m  roombalib.c  roombamidi2_icon.icns
tags/roombacmd-ipkg_DPRG_arrival/: Config.in  Makefile
tags/roombacomm_DPRG_arrival/: Makefile  README-0.95  README.eclipse.txt  makedoc.bat  makeit.bat  runit.bat
(+133 files in other folders)
